Fix metro line fading gradient on Safari

--- a/resources/assets/styles/components/_metro.scss
+++ b/resources/assets/styles/components/_metro.scss
@@ -26,7 +26,7 @@
     &::after {
       content: '';
       display: block;
-      background: linear-gradient(to right, rgba(255, 255, 255, 0), $dark-color);
+      background: linear-gradient(to right, rgba(68, 73, 88, 0), $dark-color);
       position: absolute;
       top: 0;
       bottom: 0;
